Bug 384141 - Wrong progress in tray
Summary: Wrong progress in tray
Status: RESOLVED FIXED
Alias: None
Product: kteatime
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Böhmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-29 14:40 UTC by Oleg Solovyov
Modified: 2018-03-15 16:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg Solovyov 2017-08-29 14:40:41 UTC
Progress meter shows me that my super-secret-tea-which-consumes-one-hour-of-my-time-to-be-done is 3/8 ready.
Comment 1 Oleg Solovyov 2017-08-29 14:46:00 UTC
How to reproduce:
1. Specify any tea to the list with time = 1 hour
2. Start the timer
3. Look at progress meter in system tray.
Comment 2 Oleg Solovyov 2018-01-10 13:29:15 UTC
Revision:
https://phabricator.kde.org/D9791
Comment 3 Albert Astals Cid 2018-03-15 16:32:39 UTC
Git commit c01da18a2aaf1d530a01001ee105375c746a104e by Albert Astals Cid, on behalf of Oleg Solovyov.
Committed on 15/03/2018 at 16:32.
Pushed by aacid into branch 'master'.

Fix progress in tray

If m_runningTea.time() > 360*16 (> 1.6 hours) then
360*16.0 / m_runningTea.time() converts to zero (integer division)
Hence, angleSpan is always 0

Differential Revision: https://phabricator.kde.org/D9791

M  +1    -1    src/toplevel.cpp

https://commits.kde.org/kteatime/c01da18a2aaf1d530a01001ee105375c746a104e