Fix progress in tray

BUG: 384141

If m_runningTea.time() > 360*16 (> 1.6 hours) then
360*16.0 / m_runningTea.time() converts to zero (integer division)
Hence, angleSpan is always 0

Differential Revision: https://phabricator.kde.org/D9791